feat(chat-bridge): Hide hook warning automatically
- Optimize code

Signed-off-by: MSDNicrosoft <wang3311835119@hotmail.com>