@@ -1,5 +1,5 @@
 /**
- * Portions of this code are from cancellable-chat and are licensed under the MIT License (MIT).
+ * Portions of this code are modified from cancellable-chat and are licensed under the MIT License (MIT).
  *
  * https://github.com/ZhuRuoLing/cancellable-chat/blob/977f1dfef71d783b0a824e80ab36ce25d30f2e65
  * /src/main/java/icu/takeneko/cancellablechat/InstrumentationAccess.java
@@ -31,21 +31,16 @@ package work.msdnicrosoft.avm.module.chatbridge.inject
 
 import com.velocitypowered.proxy.protocol.packet.chat.keyed.KeyedChatHandler
 import net.bytebuddy.agent.ByteBuddyAgent
-import taboolib.common.LifeCycle
-import taboolib.common.platform.Awake
+import work.msdnicrosoft.avm.AdvancedVelocityManagerPlugin.logger
 import java.io.IOException
 import java.lang.instrument.Instrumentation
+import java.lang.management.ManagementFactory
 import java.nio.file.Files
 import kotlin.io.path.Path
+import kotlin.io.path.deleteExisting
+import kotlin.io.path.isDirectory
 import work.msdnicrosoft.avm.AdvancedVelocityManagerPlugin as AVM
 
-/**
- * Object that provides access to the instrumentation used for bytecode transformation.
- *
- * The instrumentation is used to add a transformer to the JVM that can modify the bytecode of classes
- * before they are loaded. This allows for the modification of Velocity's KeyedChatHandler class to
- * inject chat messages into the chat bridge.
- */
 object InstrumentationAccess {
     /**
      * Path to the directory where transformed classes are stored.
@@ -55,12 +50,12 @@ object InstrumentationAccess {
     /**
      * Class object for the Velocity KeyedChatHandler class.
      */
-    val KEYED_CHAT_HANDLER_CLASS = KeyedChatHandler::class.java
+    private val KEYED_CHAT_HANDLER_CLASS = KeyedChatHandler::class.java
 
     /**
      * Instrumentation object used for bytecode transformation.
      */
-    lateinit var instrumentation: Instrumentation
+    private lateinit var instrumentation: Instrumentation
 
     /**
      * Initializes the instrumentation object and adds a transformer to the JVM.
@@ -68,21 +63,23 @@ object InstrumentationAccess {
      * This function should be called once at startup to initialize the instrumentation object and add
      * a transformer to the JVM.
      *
-     * @throws RuntimeException if the instrumentation object cannot be initialized or if the transformer
-     * cannot be added.
      */
-    @Suppress("unused")
-    @Awake(LifeCycle.CONST)
     fun init() {
         try {
             if (isSignedVelocityInstalled()) return
 
             prepareOutputDirectory()
             instrumentation = ByteBuddyAgent.install()
+
+            if ("-XX:+EnableDynamicAgentLoading" !in ManagementFactory.getRuntimeMXBean().inputArguments) {
+                logger.info("Detected dynamic java agent loading warnings.")
+                logger.info("It is expected behavior and you can safely ignore the warnings.")
+            }
+
             instrumentation.addTransformer(ClassTransformer, true)
             instrumentation.retransformClasses(KEYED_CHAT_HANDLER_CLASS)
         } catch (e: Exception) {
-            throw RuntimeException("Failed to initialize instrumentation", e)
+            logger.error("Failed to initialize Chat Bridge Hook", e)
         }
     }
 
@@ -93,13 +90,13 @@ object InstrumentationAccess {
      * the transformer output directory is used to store the transformed classes, and we need to make
      * sure that we don't have any stale or outdated classes lying around.
      *
-     * @throws RuntimeException if the directory cannot be deleted.
+     * @throws IOException if the directory cannot be deleted.
      */
     private fun deleteDirectory() = Files.walk(TRANSFORMER_OUTPUT_PATH)
         .sorted(Comparator.reverseOrder())
         .forEach {
             try {
-                Files.delete(it)
+                it.deleteExisting()
             } catch (e: IOException) {
                 throw IOException("Failed to delete directory: $TRANSFORMER_OUTPUT_PATH", e)
             }
@@ -111,14 +108,12 @@ object InstrumentationAccess {
      * This function prepares the transformer output directory by deleting it if it exists. This is
      * necessary because we need to make sure that we have a clean slate before we start transforming
      * classes.
-     *
-     * @throws RuntimeException if the directory cannot be prepared.
      */
     private fun prepareOutputDirectory() {
         try {
-            if (Files.isDirectory(TRANSFORMER_OUTPUT_PATH)) deleteDirectory()
+            if (TRANSFORMER_OUTPUT_PATH.isDirectory()) deleteDirectory()
         } catch (e: IOException) {
-            throw RuntimeException("Failed to prepare output directory", e)
+            throw IOException("Failed to prepare output directory", e)
         }
     }
 
